<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/numberPlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/number_plate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/numberPlateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/numberPlate"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <!--###################################################################-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/location"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <!--###################################################################-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/fuelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/fuel_type"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fuelTypeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/fuelType"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <!--###################################################################-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/carGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/car_group"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carGroupValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/carGroup"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    <!--###################################################################-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/carSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/car_series"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carSeriesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/carSeries"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
    <!--###################################################################-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15"
        android:layout_marginRight="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:id="@+id/innerCleanliness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/inner_cleaniless"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/innerCleanlinessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/innerCleanliness"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <!--###################################################################-->
    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_15"
        android:layout_below="@+id/innerCleanliness" />


    <!--<ImageView
        android:id="@+id/icon1"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_car" />

    <TextView
        android:id="@+id/modelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/icon1"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/icon1"
        android:text="Model Name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modelName"
        android:layout_toRightOf="@+id/icon1"
        android:text="Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/carLocation"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@drawable/ic_maps_distance" />

            <TextView
                android:id="@+id/carLocationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/carLocation"
                android:text="600m"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fuelIndicator"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_fuel_level" />

            <TextView
                android:id="@+id/fuelIndicatorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/fuelIndicator"
                android:text="40%"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/carTransmission"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:src="@drawable/ic_manual_transmission" />

            <TextView
                android:id="@+id/carTransmissionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/carTransmission"
                android:text="Automatic"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>


    </LinearLayout>-->

</LinearLayout>

